CARGO-1643: Correct GlassFish 7.1.x CLI JAR modules